--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title: Israel Aparecido Messias Júnior | Curriculo
-nickname: 
+nickname: jrmessias
 url: 'http://jrmessias.github.com'
 baseurl: '/curriculo/' #change it according to your repository name
 
@@ -13,10 +13,10 @@ style: styles-3
 
 #Profile information
 name: Israel Aparecido Messias Júnior
-tagline: 
+tagline: Freelancer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-summary: 'Colaborar com a empresa através de meu conhecimento, aprender e inovar, focando no
-benefício e crescimento da empresa, pessoal e profissional.'
+summary: #'Colaborar com a empresa através de meu conhecimento, aprender e inovar, focando no
+#benefício e crescimento da empresa, pessoal e profissional.'
 
 #sidebar links
 email: jrmessias@gmail.com
