:pencil: Update details
Update details from work experiences

--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -3,9 +3,8 @@
   time: 04/2017 - 11/2017
   company: Hospital Regional Terezinha Gaio Basso, SMOeste - SC
   details: "Suporte técnico a hardware e software. Organização e padronização de
-  atividades internas. Melhorias em infra-estrutura. Análise, organização e
-  encaminhamentos de melhorias aos sistemas de gestão. Análises para diminuição
-  de gastos do setor."
+  atividades internas. Análises de melhorias para infra-estrutura. Análise, organização e
+  encaminhamentos de melhorias aos sistemas de gestão. Redução de gastos do setor."
 - experience:
   role: Professor
   time: 03/2016 – 05/2017
@@ -19,10 +18,11 @@
   company: DBlinks, SMOeste - SC
   details: "Análise de requisitos. Desenvolvimento de sites/sistemas personalizados 
   e internos. Desenvolvimento de aplicativo para Android e iOS utilizando linguagens
-  web. Padronização de documentações e processos internos. Implantação de sistema
-  de administração para sites. Treinamentos. Desenvolvimento de comércio 
-  eletrônico para supermercados integrado com ERP. Análise de dados. Atendimento 
-  ao cliente. Liderança de equipe."
+  web. Padronização de documentações e processos internos. Implantação e padronização
+  de sistema de administração para sites/sistemas. Treinamentos. Desenvolvimento de
+  comércio eletrônico para supermercados integrado com ERP. Desenvolvimento de
+  template e personalização de Wordpress. Análise de dados. Atendimento ao cliente.
+  Liderança de equipe."
 - experience:
   role: Instrutor
   time: 02/2012 – 02/2015
