--- a/_data/courses.yml
+++ b/_data/courses.yml
@@ -1,4 +1,8 @@
 - course:
+  role: Curso Avançado de Atendimento a Emergências - CAAE
+  time: Cursando
+  company: CBMSC, SMOeste - SC
+- course:
   role: Curso Básico de Atendimento a Emergências - CBAE
   time: 11/2017
   company: CBMSC, SMOeste - SC
