--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,6 +1,11 @@
 - experience:
   role: Programador de Sistemas
-  time: 02/2018 - Atual
+  time: 02/2020 - Atual
+  company: iopoint, SMOeste - SC
+  details: "Desenvolvimento de aplicação web, back-end e front-end. Desenvolvimento de aplicativo para Android e iOS."
+- experience:
+  role: Programador de Sistemas
+  time: 02/2018 - 02/2020
   company: Agência PDOIS / DiskFácil, SMOeste - SC
   details: "Desenvolvimento e análise de dados para sites corporativos. Desenvolvimento front e back-end. Otimização para SEO em sites corporativos. Atendimento e suporte técnico ao cliente."
 - experience:
