--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,7 +1,22 @@
+- education: Desenvolvimento de aplicações para dispositivos móveis (App's)
+  degree: Pós-Graduação Latu Sensu
+  university: UniBF/EAD
+  time: 2020
+  status: Concluído
+- education: Desenvolvimento de jogos digitais
+  degree: Pós-Graduação Latu Sensu
+  university: UniBF/EAD
+  time: 2020
+  status: Concluído
+- education: MBA em Gestão de marcas e produtos
+  degree: Pós-Graduação Latu Sensu
+  university: UniBF/EAD
+  time: 2020
+  status: Concluído
 - education: Automação Industrial
   degree: Técnico
   university: SENAI/SMO
-  time: 2017 - 
+  time: 2017 - 2020
   status: Em andamento
 - education: Sistemas de Informação
   degree: Graduação
