--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -1,9 +1,9 @@
 # Profile
 profile: |
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
   fugiat nulla pariatur.
 
 # Sidebar
@@ -24,11 +24,11 @@ languages:
 educations:
   - education: User Experience (UX) e User Interface (UI)
     degree: Pós-Graduação Latu Sensu
-    time: Andamento
+    time: 2024
     university: Faculeste
   - education: Informática na Educação
     degree: Pós-Graduação Latu Sensu
-    time: Andamento
+    time: 2024
     university: IFMA
   - education: Desenvolvimento de Aplicações para Dispositivos Móveis (App's)
     degree: Pós-Graduação Latu Sensu
@@ -133,7 +133,7 @@ experiences:
       Orientações em aulas no segmento de desenvolvimento web e tecnologias.
       Orientações de trabalho de conclusão de curso. Ensino de HTML, CSS, JS, PHP, POO e frameworks Web.
     technologies_used: |
-      HTML, CSS, JS, PHP, CMS 
+      HTML, CSS, JS, PHP, CMS
 
 projects:
   - title: JCI Convenção Nacional 2021
