--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: pnpm Example Workflow
+name: pnpm Workflow
 on:
   push:
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [20]
+        node-version: [22]
     steps:
     - uses: actions/checkout@v4
     - name: Install pnpm
